--- a/style.css
+++ b/style.css
@@ -12,12 +12,31 @@ body {
   background-size: contain;
 }
 
+header {
+  width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 img {
   width: 100%;
 }
 
 .login {
   display: none;
+}
+
+.pImg {
+  width: 285px;
+  height: 172.422px;
 }
 
 .bar {
@@ -31,9 +50,6 @@ img {
   justify-content: flex-start;
   align-items: flex-end;
 }
-.login {
-  display: none;
-}
 
 .nav-bar {
   display: flex;
@@ -41,12 +57,15 @@ img {
   align-items: center;
   padding: 0 24px;
 }
+
 .header-logo {
   display: none;
 }
+
 .campaign {
   display: none;
 }
+
 .hamburger {
   display: block;
   cursor: pointer;
@@ -97,6 +116,11 @@ img {
   margin: 16px 0;
 }
 
+.presenterSection {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
 .nav-link {
   color: white;
   transition: 0.7s ease;
@@ -106,6 +130,7 @@ img {
 
 .nav-menu.active {
   left: 0;
+  padding: 0;
 }
 
 .nav-link:hover {
@@ -114,7 +139,7 @@ img {
 }
 
 .intro {
-  margin-top: 4px;
+  margin-top: 10px;
   padding: 15px;
 }
 
@@ -124,7 +149,6 @@ img {
 
 .about-intro {
   -webkit-background-clip: text;
-  background-clip: text;
   background-image: url(images/header\ background.jpeg);
   color: transparent;
   font-size: 35px;
@@ -133,7 +157,9 @@ img {
 
 .about {
   border: 2px solid white;
-  padding: 20px;
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .program-outline {
@@ -146,7 +172,7 @@ img {
   flex-direction: column;
   align-items: center;
   margin-top: 35px;
-  padding: 0 10px;
+  padding: 10px 10px;
 }
 
 .schedule {
@@ -158,7 +184,9 @@ img {
   background-color: #ec5242;
   width: 45px;
   height: 0.5px;
+  margin-top: 10px;
 }
+
 .outline {
   list-style: none;
   display: flex;
@@ -173,13 +201,15 @@ img {
   align-items: center;
   opacity: 0.5;
   gap: 10px;
-  padding: 2px;
+  padding: 20px;
 }
 
 .outline-items h3 {
-  color: #ec5242;
+  color: #d44c3a;
   font-size: 15px;
+  font-weight: 600;
 }
+
 .outline-items p {
   color: white;
   font-size: 12px;
@@ -197,7 +227,6 @@ img {
   justify-content: center;
   width: 70%;
   margin: 0 auto;
-  padding: 15px 25px;
   border: 1px solid #ec5242;
   padding: 10px 20px;
   margin-bottom: 20px;
@@ -227,6 +256,7 @@ img {
 
 .presenter-container {
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .presenters {
@@ -234,6 +264,7 @@ img {
   align-items: center;
   gap: 10px;
   padding: 10px;
+  /* stylelint-disable-next-line declaration-block-no-duplicate-properties */
   display: none;
 }
 
@@ -246,17 +277,23 @@ img {
   display: flex;
   justify-content: end;
   align-items: end;
+  position: relative;
 }
 
 .presenter-image img {
-  width: 120px;
-  height: 120px;
+  width: 90px;
+  height: 90px;
+}
+
+.bgPresent {
+  position: absolute;
+  top: 5%;
+  left: 5%;
 }
 
 .presenter-details {
   display: flex;
   flex-direction: column;
-
   font-size: 12px;
 }
 
@@ -267,8 +304,9 @@ img {
 
 .underline-1 {
   background-color: #3d3f47;
-  width: 30px;
+  width: 10px;
   height: 0.5px;
+  margin: 10px 0;
 }
 
 .career {
@@ -276,16 +314,19 @@ img {
 }
 
 #more {
-  background-color: #ec5242;
+  background-color: #fffefe;
   display: flex;
   justify-content: center;
-  width: 70%;
-  margin: 0 auto;
-  padding: 15px 25px;
+  width: 100%;
+  margin: 0 10px 20px 10px;
   border: 1px solid #ec5242;
   padding: 10px 20px;
-  margin-bottom: 20px;
   cursor: pointer;
+  gap: 5px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+  border-radius: 2px;
 }
 
 .partners {
@@ -313,7 +354,7 @@ img {
 footer {
   display: flex;
   align-items: center;
-  gap: 1.9rem;
+  gap: 2rem;
   padding: 2.5rem;
   justify-content: center;
   background-color: white;
@@ -328,11 +369,12 @@ footer h2 {
 }
 
 /* ABOUT PAGE */
-.about {
+.about-1 {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .about p {
   color: #ec5242;
 }
@@ -348,10 +390,12 @@ footer h2 {
   border: 2.5px solid white;
   padding: 10px;
   margin: 0 auto;
+  background-color: #fff;
 }
 
 .reach-out {
   font-size: 12px;
+  margin-top: 60px;
 }
 
 .about a {
@@ -364,6 +408,8 @@ footer h2 {
   flex-direction: column;
   align-items: center;
   background-color: white;
+  padding: 70px 10px;
+  text-align: center;
 }
 
 .design-logo p {
@@ -372,9 +418,9 @@ footer h2 {
 }
 
 .image-logo {
-  width: 200px;
-  border: 2.5px solid white;
-  margin: 0 auto;
+  width: 250px;
+  border: 2.5px solid #f1f1f1;
+  padding: 10px 40px;
 }
 
 .past-events {
@@ -384,6 +430,8 @@ footer h2 {
   align-items: center;
   background-color: white;
   margin: 0 auto;
+  border-top: 1px solid #f1f1f1;
+  padding: 100px 50px 60px 50px;
 }
 
 .past-events h2 {
@@ -393,6 +441,8 @@ footer h2 {
 
 .past-events p {
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .card-events {
@@ -410,6 +460,7 @@ footer h2 {
 
 .card-image {
   width: 285px;
+  height: 172.422px;
   margin: 0 auto;
   position: relative;
   background-color: #ec5242;
@@ -420,6 +471,7 @@ footer h2 {
 .card-image img {
   opacity: 0.4;
 }
+
 .card-info {
   position: absolute;
   top: 50%;
@@ -447,7 +499,7 @@ footer h2 {
   color: white;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .bar {
     display: none;
   }
@@ -459,7 +511,6 @@ footer h2 {
     align-items: center;
     gap: 10px;
     padding-right: 65px;
-    /* position: ; */
   }
 
   .login-item {
@@ -479,28 +530,64 @@ footer h2 {
 
   .nav-menu {
     display: flex;
+    display: contents;
+    list-style: none;
+    text-decoration: none;
+    gap: 15px;
+  }
+
+  .hamburger {
+    display: none;
   }
 
   .nav-bar {
     display: flex;
     justify-content: space-between;
     background-color: white;
-    padding: 0 15px;
+    padding: 0 60px;
+    align-items: center;
   }
 
   .header-logo {
     display: block;
     width: 100px;
   }
+
   .nav-links {
     display: block;
   }
-  .nav-menu {
-    display: flex;
-    list-style: none;
-    text-decoration: none;
-    gap: 15px;
+
+  .image-logo {
+    width: 50%;
   }
+
+  .imgLogo {
+    width: 300px;
+  }
+
+  .nav-menu-wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 60px;
+    align-items: center;
+  }
+
+  .outline-images {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+  }
+
+  .outline-items h3 {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .outline-items p {
+    font-size: 15px;
+    text-align: center;
+  }
+
   .nav-menu a {
     text-decoration: none;
     color: #3d3f47;
@@ -513,15 +600,20 @@ footer h2 {
   .campaign {
     display: block;
     border: #ec5242 solid;
-    padding: 2px;
+    padding: 10px;
   }
+
   .intro {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 4px;
+
+    /* align-items: center; */
+    margin-top: 60px;
     padding: 15px;
+    width: 50%;
+    margin-left: 50px;
   }
+
   .outline {
     flex-direction: row;
     justify-content: space-between;
@@ -529,19 +621,50 @@ footer h2 {
     margin: 0;
     gap: 2px;
   }
+
   .outline li {
     flex-direction: column;
     flex: 1;
-    padding: 10px 15px;
+    padding: 15px;
   }
 
   .tickets {
     display: none;
   }
 
+  .about {
+    width: 90%;
+    margin: 150px auto 0 auto;
+    height: 70vh;
+  }
+
+  .date {
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 5px;
+  }
+
+  .about-intro {
+    font-size: 60px;
+  }
+
+  .presenterSection {
+    grid-template-columns: 1fr 1fr;
+    margin: 0 50px;
+  }
+
+  .program-outline {
+    padding: 70px 70px;
+  }
+
+  .outline-items {
+    min-height: 300px;
+  }
+
   .more-schedule {
     display: block;
   }
+
   .more-schedule a {
     display: flex;
     justify-content: center;
@@ -563,7 +686,9 @@ footer h2 {
   }
 
   .history {
-    width: 360px;
+    width: 70%;
+    margin: 0 auto;
+    padding: 50px;
   }
 
   .card-events {
@@ -578,7 +703,7 @@ footer h2 {
   .footer {
     display: flex;
     align-items: center;
-    gap: 1.9rem;
+    gap: 5rem;
     padding: 2.5rem;
     justify-content: center;
     background-color: #272a31;
